templates/apigateway.yaml
# api gate way
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template: 
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: api-gateway-container
        image: tmdwn0704/gateway-service:test
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 80
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 80
          periodSeconds: 10
      
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8000
  type: ClusterIP
