templates/frontend.yaml
# frontend 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template: 
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: tmdwn0704/frontend:test
        imagePullPolicy: Always
        ports:
        - containerPort: 3000

        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 80
          periodSeconds: 10
          
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 80
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: LoadBalancer
