templates/order.yaml
# order-api-server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api-server
spec:
  selector:
    matchLabels:
      app: order
  replicas: 1
  template: 
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order-api-container
        image: tmdwn0704/order-service:test
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 80
          periodSeconds: 10
          
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 80
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name:  order-api-service
spec:
  selector:
    app: order
  ports:
    - name: http
      port: 8080
      targetPort: 8000
  type: ClusterIP
