templates/product.yaml
# product-api-server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api-server
spec:
  selector:
    matchLabels:
      app: product
  replicas: 1
  template: 
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product-api-container
        image: tmdwn0704/product-service:test
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 80
          periodSeconds: 10
          
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 80
          periodSeconds: 10
      
---
apiVersion: v1
kind: Service
metadata:
  name:  product-api-service
spec:
  selector:
    app: product
  ports:
    - name: http
      port: 8080
      targetPort: 8000
  type: ClusterIP
