templates/user.yaml
# user-api-server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-server
spec:
  selector:
    matchLabels:
      app: user
  replicas: 1
  template: 
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user-api-container
        image: tmdwn0704/user-service:test
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 10
          
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 80
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name:  user-api-service
spec:
  selector:
    app: user
  ports:
    - name: http
      port: 8080
      targetPort: 8000
  type: ClusterIP
